--- a/.gitignore
+++ b/.gitignore
@@ -142,7 +142,9 @@ cython_debug/
 .vscode/
 
 # data
-data/
+data/test/
+data/train/
+data/videos/
 
 # models
 models/
@@ -151,3 +153,4 @@ models/
 
 # logs
 *.log
+.venv
